@@ -1,0 +1,2 @@
+/object_fab_2
+/main.o
