@@ -2,6 +2,10 @@
 # some news ... see also TODO for hints
 #
 
+
+2017-11-04 -> add skeleton for another object fab which shows the new additional
+	      configuration features
+
 2017-11-01 -> add some more pixel-art
 	      - flask for heal and mana
 	      - heart pack
